# musthe

./: .gitmodules  .replit  init.py  pyproject.toml
config/: content.htm  content_backup.htm  sitetitle
content/: About.html  Bryhton.html  LMMS.html  Python.html  Replit.html  Synth One.html  index.html  sitemap.html  tipuesearch_content.js
downloads/: draw_chord.txt
downloads/py/: musthe.py
