[tool.poetry]
name = "repl-nix-musthe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_musthe"}]

[tool.poetry.dependencies]
python = "^3.12"
gevent = "^24.2.1"
setuptools = "^70.3.0"
waitress = "^3.0.0"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
